fixed bug on photos that made them stretch

--- a/app/assets/stylesheets/components/_avatars.scss
+++ b/app/assets/stylesheets/components/_avatars.scss
@@ -1,6 +1,8 @@
 .avatar {
   width: 30px;
+  height: 30px;
   border-radius: 50%;
+  object-fit: cover;
 }
 .avatar-large {
   width: 50px;
