--- a/app/assets/stylesheets/components/_profile_card.scss
+++ b/app/assets/stylesheets/components/_profile_card.scss
@@ -22,8 +22,10 @@
   margin-bottom: -3em;
   img {
     width: 10vmax;
+    height: 10vmax;
     // border: 5px solid #BDBDBD;
     border: 5px solid #9EB4BC;
+    object-fit: cover;
   }
 }
 
