--- a/app/assets/stylesheets/components/_wrapper.scss
+++ b/app/assets/stylesheets/components/_wrapper.scss
@@ -21,4 +21,6 @@
   border-radius: 50%;
   border: 5px solid white;
   height: 200px;
+  width: 200px;
+  object-fit: cover;
 }
